--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "bun build lib.ts --outfile=lib.js --target=browser --minify-whitespace --minify-identifiers --minify-syntax --sourcemap=inline",
     "dev": "bun build index.ts --outfile=d.js --target=browser --sourcemap=inline --watch",
-    "buildExample": "bun build ./examples/script.ts --outfile=examples/script.js --target=browser --minify-whitespace --minify-identifiers --minify-syntax"
+    "buildExample": "bun build ./examples/script.ts --outfile=examples/script.js --target=browser --minify-whitespace --minify-identifiers --minify-syntax --sourcemap=inline"
   },
   "devDependencies": {
     "bun-types": "latest"
